<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:padding="10dip" >

    	<TextView
        	android:id="@+id/lat"
        	android:layout_width="130dip"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="false"
        	android:layout_centerVertical="false"
        	android:layout_marginLeft="20dip"
        	android:text="@string/Lat" />
   	 
    	<TextView
        	android:id="@+id/tv_latitude"
        	android:layout_width="130dip"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dip"
        	android:layout_toRightOf="@+id/lat"/>

    	<TextView
        	android:id="@+id/longitude"
        	android:layout_width="130dip"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/lat"
        	android:layout_centerHorizontal="false"
        	android:layout_marginLeft="20dip"
        	android:text="@string/Long" />

    	<Button
        	android:id="@+id/b_update_location"
        	android:layout_width="125dip"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="16dip"
        	android:layout_below="@+id/tv_longitude"
        	android:text="@string/Location" />

    	<EditText
        	android:id="@+id/et_address"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dip"
        	android:layout_marginRight="20dip"
        	android:layout_below="@+id/b_update_location"
        	android:layout_marginTop="20dip"
        	android:ems="10"
        	android:text="@string/Address" />

    	<TextView
        	android:id="@+id/City"
        	android:layout_width="75dip"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/et_address"
        	android:layout_below="@+id/et_address"
        	android:ems="10"
        	android:text="@string/City" />

    	<TextView
        	android:id="@+id/Zip"
        	android:layout_width="90dip"
        	android:layout_height="wrap_content"
        	android:layout_alignRight="@+id/et_address"
        	android:layout_alignTop="@+id/City"
        	android:layout_toRightOf="@+id/State"
        	android:ems="10"
        	android:text="@string/Zip" />

    	<TextView
        	android:id="@+id/State"
        	android:layout_width="90dip"
        	android:layout_height="wrap_content"
        	android:layout_alignBaseline="@+id/City"
        	android:layout_alignBottom="@+id/City"
        	android:layout_toRightOf="@+id/City"
        	android:ems="10"
        	android:text="@string/State" />
   	 
    	<Button
        	android:id="@+id/b_take_picture"
        	android:layout_width="125dip"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/longitude"
        	android:layout_below="@+id/CityData"
        	android:text="@string/Picture" />

    	<TextView
        	android:id="@+id/tv_longitude"
        	android:layout_width="130dip"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/tv_latitude"
        	android:layout_alignLeft="@+id/tv_latitude"
        	android:layout_alignRight="@+id/tv_latitude"/>
   	 
    	<TextView
        	android:id="@+id/CityData"
			android:layout_width="75dip"
        	android:layout_height="40dip"
        	android:layout_alignLeft="@+id/et_address"
        	android:layout_below="@+id/City"
        	android:ems="10"
        	android:text="@string/DefaultCity" />
   	 
    	<TextView
        	android:id="@+id/ZipData"
        	android:layout_width="75dip"
        	android:layout_height="40dip"
        	android:layout_alignLeft="@+id/Zip"
        	android:layout_alignRight="@+id/et_address"
        	android:layout_below="@+id/Zip"
        	android:ems="10"
        	android:text="@string/DefaultZip" />
   	 
    	<TextView
        	android:id="@+id/StateData"
	android:layout_width="90dip"
        	android:layout_height="40dip"
        	android:layout_alignBaseline="@+id/CityData"
        	android:layout_alignBottom="@+id/CityData"
        	android:layout_toRightOf="@+id/CityData"
        	android:ems="10"
        	android:text="@string/DefaultState" />

    	<Button
        	android:id="@+id/b_send_email"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/b_take_picture"
        	android:layout_alignRight="@+id/ZipData"
        	android:layout_below="@+id/b_take_picture"
        	android:layout_marginTop="75dip"
        	android:text="@string/Submit" />

    	<ImageView
    	    android:id="@+id/iv_user_pic"
    	    android:layout_width="66dip"
    	    android:layout_height="48dip"
    	    android:layout_alignRight="@+id/CityData"
    	    android:layout_below="@+id/b_take_picture"
    	    android:src="@drawable/ic_launcher" />

	</RelativeLayout>